# dino

./: CMakeLists.txt
libdino/: CMakeLists.txt
libdino/src/service/: call_state.vala  calls.vala  notification_events.vala
libdino/src/util/: util.vala
main/: CMakeLists.txt
main/src/: main.vala
main/src/ui/: notifier_freedesktop.vala
plugins/phone-ringer/: CMakeLists.txt
plugins/phone-ringer/sounds/: CREDITS
plugins/phone-ringer/src/: plugin.vala
plugins/rtp/src/: plugin.vala
